generate new types
