# tonmetrics/swagger-tonconnect-bridge.json
@@ -1021,7 +1021,7 @@
             "type": "string",
             "enum": [
               "",
-              "bridge-events-client-unsubscribed"
+              "bridge-verify"
             ]
           },
           "network_id": {
@@ -1054,6 +1054,96 @@
           "verification_result": {
             "description": "Status of verification.",
             "type": "string"
+          },
+          "verify_type": {
+            "type": "string",
+            "enum": [
+              "connect"
+            ]
+          },
+          "version": {
+            "description": "The version of the sending subsystem.",
+            "type": "string"
+          }
+        }
+      },
+      "BridgeVerifyValidationFailedEvent": {
+        "description": "When the client sends a verification request to bridge events.",
+        "type": "object",
+        "properties": {
+          "bridge_url": {
+            "description": "Bridge URL.",
+            "type": "string"
+          },
+          "client_environment": {
+            "description": "The client environment.",
+            "type": "string",
+            "enum": [
+              "",
+              "bridge"
+            ]
+          },
+          "client_id": {
+            "description": "A unique session ID.",
+            "type": "string"
+          },
+          "client_timestamp": {
+            "description": "The timestamp of the event on the client side, in Unix time (stored as an integer).",
+            "type": "integer",
+            "example": 0
+          },
+          "error_code": {
+            "description": "Error code.",
+            "type": "integer"
+          },
+          "error_message": {
+            "description": "Error message.",
+            "type": "string"
+          },
+          "event_id": {
+            "description": "Unique random event UUID generated by the sender. Used for deduplication on the backend side.",
+            "type": "string",
+            "example": "8d5e90bd-d6f8-4ab0-bff8-0ee2f26b44c3"
+          },
+          "event_name": {
+            "type": "string",
+            "enum": [
+              "",
+              "bridge-verify-validation-failed"
+            ]
+          },
+          "network_id": {
+            "description": "Network id (-239 for the mainnet and -3 for the testnet). Other values should be rejected.",
+            "type": "string",
+            "example": "-3"
+          },
+          "subsystem": {
+            "description": "The subsystem used to collect the event (possible values: dapp, bridge, wallet).",
+            "type": "string",
+            "enum": [
+              "bridge",
+              "dapp",
+              "dapp-sdk",
+              "wallet",
+              "wallet-sdk"
+            ],
+            "example": "dapp"
+          },
+          "trace_id": {
+            "description": "ID to aggregate multiple events into one trace. UUIDv7 must be used (first 48 bits must be unix_ts_ms as in the specification). trace_id older than 24h won't be accepted.",
+            "type": "string",
+            "example": "00000000-0000-0000-0000-000000000000"
+          },
+          "user_id": {
+            "description": "A unique identifier for the user (refer to subsystem session details for more information). May be omitted, in this case it will be generated on the backend side and generated. UUID must be used.",
+            "type": "string",
+            "example": "8d5e90bd-d6f8-4ab0-bff8-0ee2f26b44c3"
+          },
+          "verify_type": {
+            "type": "string",
+            "enum": [
+              "connect"
+            ]
           },
           "version": {
             "description": "The version of the sending subsystem.",
@@ -1287,6 +1377,24 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/BridgeVerifyEvent"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "stub"
+          }
+        }
+      }
+    },
+    "/dummy/BridgeVerifyValidationFailedEvent": {
+      "post": {
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BridgeVerifyValidationFailedEvent"
               }
             }
           }
